fix slight problem with "D" getting cut off on hover

--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ li#item-letterpress {
 li#item-screenprinting {
     left   : 214px;
     top    : 333px;
-    width  : 150px;
+    width  : 148px;
     height : 24px;
 }
 
